--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node,linux,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,linux,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,audio,node
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,audio,node
+
+### Audio ###
+*.aif
+*.iff
+*.m3u
+*.m4a
+*.mid
+*.mp3
+*.mpa
+*.ra
+*.wav
+*.wma
+*.ogg
+*.flac
 
 ### Linux ###
 *~
@@ -176,4 +190,4 @@ dist
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/node,linux,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,audio,node
