--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "@huggingface/inference": "^2.7.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "speaker": "^0.5.5"
   },
   "type": "module"
 }
