--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "tsc && node dist/index.js",
+    "clean": "sudo rm -r dist"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +19,10 @@
     "fluent-ffmpeg": "^2.1.3",
     "speaker": "^0.5.5"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5"
+  }
 }
